Update package.json with accurate project info

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "example-typescript-package",
-  "version": "0.2.2",
-  "description": "",
+  "name": "async-kv",
+  "version": "1.0.0",
+  "description": "Resolves promises in key-value pairs maintaining type information",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "umd:main": "dist/umd/index.js",
@@ -28,27 +28,28 @@
     "dist"
   ],
   "keywords": [
-    "example",
+    "promise",
     "typescript",
     "npm",
     "package",
-    "sample",
-    "boilerplate",
-    "starter",
-    "demo",
-    "cjs",
-    "esm",
-    "umd"
+    "key-value",
+    "kv",
+    "key",
+    "value",
+    "resolve",
+    "object",
+    "map",
+    "set"
   ],
-  "author": "Tom Chen <tomchen.org@gmail.com>",
+  "author": "Tony Tamplin <github@tony.dev>",
   "license": "MIT",
-  "homepage": "https://github.com/tomchen/example-typescript-package",
+  "homepage": "https://github.com/tonytamps/async-kv",
   "repository": {
     "type": "git",
-    "url": "git@github.com:tomchen/example-typescript-package.git"
+    "url": "git@github.com:tonytamps/async-kv.git"
   },
   "bugs": {
-    "url": "https://github.com/tomchen/example-typescript-package/issues"
+    "url": "https://github.com/tonytamps/async-kv/issues"
   },
   "dependencies": {},
   "devDependencies": {
