--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "async-kv",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Resolves promises in key-value pairs maintaining type information",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -19,7 +19,7 @@
     "package": "npm run build && npm pack",
     "test": "jest --no-cache --runInBand",
     "test:cov": "jest --coverage --no-cache --runInBand",
-    "addscope": "node tools/packagejson name @tomchen/example-typescript-package"
+    "addscope": "node tools/packagejson name @tonytamps/async-kv"
   },
   "publishConfig": {
     "access": "public"
