--- a/package.json
+++ b/package.json
@@ -1,74 +1,87 @@
 {
-  "name": "async-kv",
-  "version": "1.0.2",
-  "description": "Resolves promises in key-value pairs maintaining type information",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
-  "umd:main": "dist/umd/index.js",
-  "types": "dist/types/index.d.js",
-  "scripts": {
-    "postinstall": "husky install",
-    "prepublishOnly": "pinst --disable",
-    "postpublish": "pinst --enable",
-    "build": "npm run build:cjs && npm run build:esm && npm run build:umd && npm run build:types",
-    "build:cjs": "node tools/cleanup cjs && tsc -p config/tsconfig.cjs.json",
-    "build:esm": "node tools/cleanup esm && tsc -p config/tsconfig.esm.json",
-    "build:umd": "node tools/cleanup umd && webpack --config config/webpack.config.js",
-    "build:types": "node tools/cleanup types && tsc -p config/tsconfig.types.json",
-    "clean": "node tools/cleanup",
-    "package": "npm run build && npm pack",
-    "test": "jest --no-cache --runInBand",
-    "test:cov": "jest --coverage --no-cache --runInBand",
-    "addscope": "node tools/packagejson name @tonytamps/async-kv"
-  },
-  "publishConfig": {
-    "access": "public"
-  },
-  "files": [
-    "dist"
-  ],
-  "keywords": [
-    "promise",
-    "typescript",
-    "npm",
-    "package",
-    "key-value",
-    "kv",
-    "key",
-    "value",
-    "resolve",
-    "object",
-    "map",
-    "set"
-  ],
-  "author": "Tony Tamplin <github@tony.dev>",
-  "license": "MIT",
-  "homepage": "https://github.com/tonytamps/async-kv",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:tonytamps/async-kv.git"
-  },
-  "bugs": {
-    "url": "https://github.com/tonytamps/async-kv/issues"
-  },
-  "dependencies": {},
-  "devDependencies": {
-    "@commitlint/cli": "^13.1.0",
-    "@commitlint/config-conventional": "^13.1.0",
-    "@types/jest": "^27.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.31.1",
-    "@typescript-eslint/parser": "^4.31.1",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "husky": "^7.0.2",
-    "jest": "^27.2.0",
-    "pinst": "^2.1.6",
-    "prettier": "^2.4.0",
-    "ts-jest": "^27.0.5",
-    "ts-loader": "^9.2.5",
-    "typescript": "^4.4.3",
-    "webpack": "^5.52.1",
-    "webpack-cli": "^4.8.0"
-  }
+    "name": "async-kv",
+    "version": "1.1.1",
+    "description": "Resolves promises in key-value pairs maintaining type information",
+    "main": "build/main/index.js",
+    "module": "build/module/index.js",
+    "typings": "build/main/index.d.ts",
+    "scripts": {
+        "prebuild": "rm -rf build/*",
+        "build": "run-p build:*",
+        "build:main": "tsc -p tsconfig.json",
+        "build:module": "tsc -p tsconfig.module.json",
+        "fix": "run-s fix:*",
+        "fix:prettier": "prettier \"src/**/*.ts\" --write",
+        "fix:lint": "eslint src --ext .ts --fix",
+        "test": "run-s build test:*",
+        "test:jest": "jest --no-cache --runInBand",
+        "test:lint": "eslint src --ext .ts",
+        "test:prettier": "prettier \"src/**/*.ts\" --list-different",
+        "test:spelling": "cspell \"{README.md,.github/*.md,src/**/*.ts}\"",
+        "watch:build": "tsc -p tsconfig.json -w",
+        "watch:test": "jest --no-cache --runInBand --watch",
+        "cov": "run-s build test:unit cov:html cov:lcov && open-cli coverage/index.html",
+        "cov:test": "jest --coverage --no-cache --runInBand",
+        "version": "standard-version",
+        "reset-hard": "git clean -dfx && git reset --hard && npm i",
+        "prepare-release": "run-s reset-hard test cov version"
+    },
+    "publishConfig": {
+        "access": "public"
+    },
+    "files": [
+        "build/main",
+        "build/module",
+        "!**/*.spec.*",
+        "!**/*.json",
+        "CHANGELOG.md",
+        "LICENSE",
+        "README.md"
+    ],
+    "keywords": [
+        "promise",
+        "typescript",
+        "npm",
+        "package",
+        "key-value",
+        "kv",
+        "key",
+        "value",
+        "resolve",
+        "object",
+        "map",
+        "set"
+    ],
+    "author": "Tony Tamplin <github@tony.dev>",
+    "license": "MIT",
+    "homepage": "https://github.com/tonytamps/async-kv",
+    "repository": {
+        "type": "git",
+        "url": "git@github.com:tonytamps/async-kv.git"
+    },
+    "bugs": {
+        "url": "https://github.com/tonytamps/async-kv/issues"
+    },
+    "engines": {
+        "node": ">=14"
+    },
+    "dependencies": {},
+    "devDependencies": {
+        "@types/jest": "^27.0.1",
+        "@typescript-eslint/eslint-plugin": "^4.0.1",
+        "@typescript-eslint/parser": "^4.0.1",
+        "cspell": "^4.1.0",
+        "eslint": "^7.8.0",
+        "eslint-config-prettier": "^6.11.0",
+        "eslint-plugin-eslint-comments": "^3.2.0",
+        "eslint-plugin-import": "^2.22.0",
+        "jest": "^27.2.0",
+        "npm-run-all": "^4.1.5",
+        "open-cli": "^6.0.1",
+        "prettier": "^2.1.1",
+        "standard-version": "^9.0.0",
+        "ts-jest": "^27.0.5",
+        "ts-node": "^9.0.0",
+        "typescript": "^4.0.2"
+    }
 }
