--- a/.editorconfig
+++ b/.editorconfig
@@ -1,31 +1,15 @@
+# http://editorconfig.org
 root = true
 
 [*]
 charset = utf-8
-indent_style = space
-indent_size = 2
 end_of_line = lf
+indent_size = 4
+indent_style = space
 insert_final_newline = true
+max_line_length = 100
 trim_trailing_whitespace = true
 
-[*.php]
-indent_style = tab
-indent_size = 4
-
-[*.py]
-charset = utf-8
-indent_style = space
-indent_size = 4
-end_of_line = lf
-insert_final_newline = true
-trim_trailing_whitespace = true
-
-[Makefile]
-indent_style = tab
-indent_size = 4
-
-[*.sln]
-indent_style = tab
-
-[*.{md,mdx}]
+[*.md]
+max_line_length = 0
 trim_trailing_whitespace = false
