--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,12 +29,10 @@ jobs:
       - name: Setup .npmrc file to publish to npm
         uses: actions/setup-node@v1
         with:
-          node-version: '14.x'
+          node-version: '16.x'
           registry-url: 'https://registry.npmjs.org'
-      - name: Install modules
-        run: npm install
-      - name: Build
-        run: npm run build
+      - name: Test
+        run: npm run test
       - name: Publish to npm
         run: npm publish --access public
         env:
