--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "async-kv",
-    "version": "1.1.1",
+    "version": "1.1.2",
     "description": "Resolves promises in key-value pairs maintaining type information",
     "main": "build/main/index.js",
     "module": "build/module/index.js",
@@ -20,7 +20,7 @@
         "test:spelling": "cspell \"{README.md,.github/*.md,src/**/*.ts}\"",
         "watch:build": "tsc -p tsconfig.json -w",
         "watch:test": "jest --no-cache --runInBand --watch",
-        "cov": "run-s build test:unit cov:html cov:lcov && open-cli coverage/index.html",
+        "cov": "run-s build cov:*",
         "cov:test": "jest --coverage --no-cache --runInBand",
         "version": "standard-version",
         "prepare-release": "npm i && run-s test cov version"
