--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ npm-debug.log*
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/
+coverage/
 
 # Dependency directories
 node_modules/
