--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "files": [
         "build/main",
         "build/module",
-        "!**/*.spec.*",
+        "!**/__test__",
         "!**/*.json",
         "CHANGELOG.md",
         "LICENSE",
