--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "files": [
         "build/main",
         "build/module",
-        "!**/__test__",
+        "!**/__tests__",
         "!**/*.json",
         "CHANGELOG.md",
         "LICENSE",
