--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
         "watch:build": "tsc -p tsconfig.json -w",
         "watch:test": "jest --no-cache --runInBand --watch",
         "cov": "run-s build cov:*",
-        "cov:test": "jest --coverage --no-cache --runInBand",
-        "version": "standard-version",
-        "prepare-release": "npm i && run-s test cov version"
+        "cov:test": "jest --coverage --no-cache --runInBand"
     },
     "publishConfig": {
         "access": "public"
@@ -76,9 +74,7 @@
         "eslint-plugin-import": "^2.22.0",
         "jest": "^27.2.0",
         "npm-run-all": "^4.1.5",
-        "open-cli": "^6.0.1",
         "prettier": "^2.1.1",
-        "standard-version": "^9.0.0",
         "ts-jest": "^27.0.5",
         "ts-node": "^9.0.0",
         "typescript": "^4.0.2"
