--- a/.releaserc.json
+++ b/.releaserc.json
@@ -7,17 +7,7 @@
         "@semantic-release/release-notes-generator",
         "@semantic-release/changelog",
         "@semantic-release/npm",
-        [
-            "@semantic-release/github",
-            {
-                "assets": [
-                    "build/**",
-                    "package.json",
-                    "README.md",
-                    "CHANGELOG.md"
-                ]
-            }
-        ]
+        "@semantic-release/github"
     ],
     "repositoryUrl": "https://github.com/tonytamps/async-kv"
 }
